make header into light/dark mode button only, make ocean tiles transparent, fix z fighting

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,32 +1,22 @@
 @use '@angular/material' as mat;
 
-    mat-toolbar {
-      display: flex;
-      align-items: center;
+@include mat.icon-button-overrides(
+  (icon-color: var(--mat-sys-on-primary))
+);
     
-      @include mat.toolbar-overrides(
-        (
-          container-background-color: var(--mat-sys-primary),
-          container-text-color: var(--mat-sys-on-primary),
-        )
-      );
-    
-      @include mat.icon-button-overrides(
-        (
-          icon-color: var(--mat-sys-on-primary),
-        )
-      );
-    }
-    
-    .selected-theme {
-      @include mat.menu-overrides(
-        (
-          item-icon-color: var(--mat-sys-primary),
-          item-label-text-color: var(--mat-sys-primary),
-        )
-      );
-    }
-    
-    .flex-stretch {
-      flex: 1 0 auto;
-    }
+.selected-theme {
+@include mat.menu-overrides(
+  (
+    item-icon-color: var(--mat-sys-primary),
+    item-label-text-color: var(--mat-sys-primary),
+  )
+)
+}
+
+.header-button-container {
+  background-color: var(--mat-sys-background);
+  border-radius: 3vh;
+  position: fixed;
+  right: 1vh;
+  top: 1vh;
+}
